@@ -1,2 +1,2 @@
-!function(e){function n(o){if(t[o])return t[o].exports;var r=t[o]={i:o,l:!1,exports:{}};return e[o].call(r.exports,r,r.exports,n),r.l=!0,r.exports}var t={};n.m=e,n.c=t,n.i=function(e){return e},n.d=function(e,t,o){n.o(e,t)||Object.defineProperty(e,t,{configurable:!1,enumerable:!0,get:o})},n.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return n.d(t,"a",t),t},n.o=function(e,n){return Object.prototype.hasOwnProperty.call(e,n)},n.p="",n(n.s=2)}([function(e,n){jQuery(document).ready(function(e){function n(e){t[e]&&(t[o]&&(t[o].$el.removeClass("current"),t[o].$section.removeClass("current")),t[e].$el.addClass("current"),t[e].$section.addClass("current"),o=e)}var t=[],o="",r=0;if(e("ul.subsubsub a").each(function(){r++;var o=e(this),a=o.data("section");t[a]={$el:o,$section:e("#app-settings-"+a)},o.click(function(e){n(a)})}),r){var a=window.location.hash;a=a?a.substr(1):Object.keys(t)[0],n(a)}})},function(e,n){jQuery(document).ready(function(e){function n(){"yes"==u.val()?s.show():s.hide()}var t,o,r,a=e(".custom_color_row"),i=e(".preset_samples");e('select[name="color_set"]').change(function(){var n=e(this).val();if(0==n)a.show(),i.hide();else{a.hide(),i.show();for(r in app_i10n.classes)if(app_i10n.classes.hasOwnProperty(r)){for(t=[],o=1;o<=3;o++)t[o]=app_i10n.presets[r][o];i.find("a."+r).css("background-color","#"+t[n])}}});var c=e(".colorpicker_input");c.each(function(){var n=this.id;e("#"+n).ColorPicker({onSubmit:function(n,t,o,r){e(r).val(t),e(r).ColorPickerHide()},onBeforeShow:function(){e(this).ColorPickerSetColor(this.value)},onChange:function(t,o,r){var a=e("#"+n);a.val(o),a.parent().find("a.pickcolor").css("background-color","#"+o)}}).bind("keyup",function(){e(this).ColorPickerSetColor(this.value)})}),c.keyup(function(){var n=e(this).val();n=n.replace(/[^a-fA-F0-9]/,""),3!==n.length&&6!==n.length||e(this).parent().find("a.pickcolor").css("background-color","#"+n)});var s=e(".api_detail"),u=e('select[name="login_required"]');n(),u.change(function(){n()}),e('select[name="payment_required"]').change(function(){"yes"==e('select[name="payment_required"]').val()?e(".payment_row").show():e(".payment_row").hide()}),e("#app-settings-section-new-worker form.add-new-service-provider").on("submit",function(){var n=e(this);if(null==e("#services_provided",n).val())return alert(app_i10n.messages.select_service_provider),!1}),e(".appointment-create-page a.button").on("click",function(){var n=e("select",e(this).closest("td")).val(),t={action:"make_an_appointment_page",_wpnonce:e(this).data("nonce"),app_page_type:n};return e.post(ajaxurl,t,function(n){var t='<div class="notice '+(n.success?"updated":"error")+'"><p>'+n.data.message+"</p></div>";e(".appointments-settings h1").after(t)}),!1})})},function(e,n,t){t(0),e.exports=t(1)}]);
+!function(e){function n(o){if(t[o])return t[o].exports;var r=t[o]={i:o,l:!1,exports:{}};return e[o].call(r.exports,r,r.exports,n),r.l=!0,r.exports}var t={};n.m=e,n.c=t,n.i=function(e){return e},n.d=function(e,t,o){n.o(e,t)||Object.defineProperty(e,t,{configurable:!1,enumerable:!0,get:o})},n.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return n.d(t,"a",t),t},n.o=function(e,n){return Object.prototype.hasOwnProperty.call(e,n)},n.p="",n(n.s=2)}([function(e,n){jQuery(document).ready(function(e){function n(e){t[e]&&(t[o]&&(t[o].$el.removeClass("current"),t[o].$section.removeClass("current")),t[e].$el.addClass("current"),t[e].$section.addClass("current"),o=e)}var t=[],o="",r=0;if(e("ul.subsubsub a").each(function(){r++;var o=e(this),i=o.data("section");t[i]={$el:o,$section:e("#app-settings-"+i)},o.click(function(e){n(i)})}),r){var i=window.location.hash;i=i?i.substr(1):Object.keys(t)[0],n(i)}})},function(e,n){jQuery(document).ready(function(e){function n(){"yes"==u.val()?c.show():c.hide()}var t,o,r,i=e(".custom_color_row"),a=e(".preset_samples");e('select[name="color_set"]').change(function(){var n=e(this).val();if(0==n)i.show(),a.hide();else{i.hide(),a.show();for(r in app_i10n.classes)if(app_i10n.classes.hasOwnProperty(r)){for(t=[],o=1;o<=3;o++)t[o]=app_i10n.presets[r][o];a.find("a."+r).css("background-color","#"+t[n])}}});var s=e(".colorpicker_input");s.each(function(){var n=this.id;e("#"+n).ColorPicker({onSubmit:function(n,t,o,r){e(r).val(t),e(r).ColorPickerHide()},onBeforeShow:function(){e(this).ColorPickerSetColor(this.value)},onChange:function(t,o,r){var i=e("#"+n);i.val(o),i.parent().find("a.pickcolor").css("background-color","#"+o)}}).bind("keyup",function(){e(this).ColorPickerSetColor(this.value)})}),s.keyup(function(){var n=e(this).val();n=n.replace(/[^a-fA-F0-9]/,""),3!==n.length&&6!==n.length||e(this).parent().find("a.pickcolor").css("background-color","#"+n)});var c=e(".api_detail"),u=e('select[name="login_required"]');n(),u.change(function(){n()}),e('select[name="payment_required"]').change(function(){"yes"==e('select[name="payment_required"]').val()?e(".payment_row").show():e(".payment_row").hide()}),e("#app-settings-section-new-worker form.add-new-service-provider").on("submit",function(){var n=e(this);if(null==e("#services_provided",n).val())return alert(app_i10n.messages.select_service_provider),!1}),e(".appointment-create-page a.button").on("click",function(){var n=e("select",e(this).closest("td")).val(),t={action:"make_an_appointment_page",_wpnonce:e(this).data("nonce"),app_page_type:n};return e.post(ajaxurl,t,function(n){var t='<div class="notice '+(n.success?"updated":"error")+'"><p>'+n.data.message+"</p></div>";e(".appointments-settings h1").after(t)}),!1}),e(document).on("click","#workers-table .delete a",function(){if(window.confirm(app_i10n.messages.workers.delete_confirmation)){var n={action:"delete_worker",nonce:e(this).data("nonce"),id:e(this).data("id")};e.post(ajaxurl,n,function(t){t.success&&e("tr#app-tr-worker-"+n.id).detach();var o='<div class="notice notice-'+(t.success?"success":"error")+' is-dismissible"><p>'+t.data.message+"</p></div>";e(".appointments-settings h1").after(o)})}})})},function(e,n,t){t(0),e.exports=t(1)}]);
 //# sourceMappingURL=admin-settings.js.map
